--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
         name: build sample code
         runs-on: windows-latest
         strategy:
-            fast-fail: false
+            fail-fast: false
             matrix:
                 platform:
                     - x64
